Update Calendar Astronomy

--- a/_includes/moon-phase.html
+++ b/_includes/moon-phase.html
@@ -44,8 +44,8 @@
         moonday = resultdays / mooncycle;
         moonday = resultdays / mooncycle - Math.floor(resultdays / mooncycle);
         moonday = Math.round(mooncycle * moonday);
-        document.write('<img width="64" height="64" src="{{ site.baseurl }}/images/moon-phase/moon' + moonday + '.png" alt="Pha mặt trăng" title="Pha mặt trăng đêm nay." \/>');
+        document.write('<img width="64" height="64" src="{{ site.baseurl }}/images/moon-phase/moon' + moonday + '.png" alt="Pha Mặt Trăng đêm nay" title="Pha Mặt Trăng đêm nay." \/>');
     </script>
 </div>
 <div id="earthwrapper"><div id="earth"></div></div>
-<div class="text-white alt-font font-weight-500 margin-20px-top d-inline-block text-medium">Pha mặt trăng đêm nay</div>
+<div class="text-white alt-font font-weight-500 margin-20px-top d-inline-block text-medium">Pha Mặt Trăng đêm nay</div>
