--- a/_layouts/know_detail.html
+++ b/_layouts/know_detail.html
@@ -5,41 +5,23 @@ layout: default
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 text-center">
-                <h5 class="alt-font font-weight-600 text-white">
+                <h5 class="alt-font font-weight-600 text-white margin-3-rem-bottom md-margin-2-rem-bottom">
                     {{ page.title | escape }}
                 </h5>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-lg-12">
-                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px">
-                    <div class="row">
-                        <div class="col-12 col-lg-12 margin-30px-bottom">
-                            <img 
-                                src="{{ site.baseurl }}/images/lich-thien-van/post/{{ site.data.calendar_image.calendar_image[10].properties }}" 
-                                alt='Ngày {{ page.thoigian }}/{{ page.date | date: "%m/%Y" }}: {{ page.title | escape }}'
-                                title='Ngày {{ page.thoigian }}/{{ page.date | date: "%m/%Y" }}: {{ page.title | escape }}'
-                                class="w-100 border-radius-6px" 
-                            />
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12 col-lg-4 md-margin-30px-bottom">
-                            <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px">
-                                <h6 class="alt-font font-weight-600 text-white">
-                                    {{ page.title | escape }}
-                                </h6>
-                                <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry's standard dummy text a galley of scrambled it to make a type specimen book.</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-lg-8">
-                            <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px">
-                                {{ content }}
-                            </div>
-                        </div>
-                    </div>
+        <div class="border-radius-6px">
+            <div class="row">
+                <div class="col-12 col-lg-12 margin-30px-bottom">
+                    <img 
+                        src="{{ site.baseurl }}/images/lich-thien-van/post/{{ site.data.calendar_image.calendar_image[10].properties }}" 
+                        alt='Ngày {{ page.thoigian }}/{{ page.date | date: "%m/%Y" }}: {{ page.title | escape }}'
+                        title='Ngày {{ page.thoigian }}/{{ page.date | date: "%m/%Y" }}: {{ page.title | escape }}'
+                        class="w-100 border-radius-6px" 
+                    />
                 </div>
             </div>
         </div>
     </div>
+    {{ content }}
 </section>
