--- a/css/css-custom.css
+++ b/css/css-custom.css
@@ -58,6 +58,23 @@ a:focus, a:hover {
     background: #FFC367;
 }
 
+/* 3d-model */
+.model-viewer-container {
+    width: 100%;
+    height: 100%;
+    min-height: 500px;
+    margin: 0 auto;
+    background-color: #000;
+    border-radius: 6px;
+}
+
+.model-viewer-container model-viewer {
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+}
+/* 3d-model end */
+
 @media (max-width: 991px) {
     .navbar.bg-transparent {
         background-color: #000!important;
