--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,7 +57,7 @@
                 <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
                     <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
                         <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
-                            Các hành tinh trong Hệ Mặt Trời
+                            Các hành tinh
                         </h5>
                     </div>
                 </div>
