Update page home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -136,7 +136,7 @@
         <!-- Hết Lịch thiên văn --> 
 
         <!-- Các vệ tinh tự nhiên -->
-        <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
+        <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr pt-0">
             <div class="container">
                 <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
                     <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
