--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -56,7 +56,7 @@
                   <a href="{{ "/" | relative_url }}" class="footer-logo"><img src="{{ site.baseurl }}/images/logo.png" alt=""></a>
               </div>
               <div class="col-12 col-sm-8 text-center text-sm-right last-paragraph-no-margin">
-                  <p>&copy; 2021 Bản quyền thuộc về <a href="https://namgd.com/" target="_blank" class="text-decoration-line-bottom text-white">NamGD.com</a></p>
+                  <p>&copy; 2021 Bản quyền thuộc về <a href="https://namgd.com/" target="_blank" class="text-decoration-line-bottom text-white" rel="noopener">NamGD.com</a></p>
               </div>
           </div>
       </div>
