--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,7 +57,7 @@
                 <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
                     <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
                         <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
-                            Các hành tinh
+                            Danh sách hành tinh
                         </h5>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                                             </a>
                                         </div>
                                         <div class="post-details padding-2-rem-lr padding-1-half-rem-tb bg-black text-center">
-                                            <a href="{{ post.url }}" title="{{ post.title }}" class="alt-font font-weight-600 text-extra-medium text-very-light-white-transparent">
+                                            <a href="{{ post.url }}" title="{{ post.title }}" class="alt-font font-weight-600 text-extra-medium text-white">
                                                 {{ post.title }}
                                             </a>
                                         </div>
@@ -159,7 +159,7 @@
                                                 </a>
                                             </div>
                                             <div class="post-details padding-2-rem-lr padding-1-half-rem-tb bg-black text-center">
-                                                <a href="{{ post.url }}" title="{{ post.title }}" class="alt-font font-weight-600 text-extra-medium text-very-light-white-transparent">
+                                                <a href="{{ post.url }}" title="{{ post.title }}" class="alt-font font-weight-600 text-extra-medium text-white">
                                                     {{ post.title }}
                                                     <br />
                                                     ({{ post.satellite-of }})
