--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,7 @@
         <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
             <div class="container-fluid">
                 <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
-                    <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                    <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
                         <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
                             Danh sách hành tinh
                         </h5>
@@ -62,7 +62,7 @@
                             <!-- start blog item -->
                             {% for post in site.categories.Kien-thuc reversed %}
                                 {% if post.categories contains "Hanh-tinh" %}
-                                <li class="grid-item wow animate__fadeIn">
+                                <li class="grid-item">
                                     <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                         <div class="blog-post-image bg-medium-slate-blue">
                                             <a href="{{ post.url }}" title="{{ post.title }}">
@@ -91,7 +91,7 @@
         <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr pt-0">
             <div class="container-fluid">
                 <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
-                    <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                    <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
                         <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
                             Lịch Thiên Văn Tháng 01/2022
                         </h5>
@@ -104,7 +104,7 @@
                             <!-- start blog item -->
                             {% for post in site.categories.Lich-thien-van reversed %}
                                 {% if post.categories contains "Nam-2022" and post.categories contains "Thang-1" %}
-                                <li class="grid-item wow animate__fadeIn">
+                                <li class="grid-item">
                                     <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                         <div class="blog-post-image bg-medium-slate-blue">
                                             <a href="{{ post.url }}" title="{{ post.title }}">
@@ -133,7 +133,7 @@
         <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr pt-0">
             <div class="container">
                 <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
-                    <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                    <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
                         <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
                         Các vệ tinh tự nhiên
                         </h5>
