--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,6 +53,7 @@
                         <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
                             Danh sách hành tinh
                         </h5>
+                        <p class="text-center text-white">Danh sách hành tinh trong Hệ Mặt Trời</p>
                     </div>
                 </div>
                 <div class="row">
@@ -95,6 +96,7 @@
                         <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
                             Lịch Thiên Văn Tháng 01/2022
                         </h5>
+                        <p class="text-center text-white">Danh sách sự kiện thiên văn trong tháng</p>
                     </div>
                 </div>
                 <div class="row">
@@ -135,8 +137,9 @@
                 <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
                     <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
                         <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
-                        Các vệ tinh tự nhiên
+                        Vệ tinh tự nhiên
                         </h5>
+                        <p class="text-center text-white">Danh sách vệ tinh tự nhiên của các hành tinh trong Hệ Mặt Trời</p>
                     </div>
                 </div>
                 <div class="row">
