--- a/_layouts/know_detail.html
+++ b/_layouts/know_detail.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section class="bg-dark wow animate__fadeIn" style="visibility: visible; animation-name: fadeIn;">
+<section class="bg-dark">
     {{ content }}
 </section>
 <script src='https://unpkg.com/@google/model-viewer@0.8.1/dist/model-viewer.js' type='module'></script>
