--- a/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/css/style.css
+++ b/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/css/style.css
@@ -5,6 +5,23 @@ html {
 	overflow-y: scroll;
 }
 
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #FEC369;
+}
+
 body {
 	margin: 0px;
 	padding: 0px;
