--- a/css/css-custom.css
+++ b/css/css-custom.css
@@ -1,19 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 ::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
+	-webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 58%);
+	background-color: #343a40;
 }
 
 ::-webkit-scrollbar {
 	width: 16px;
-	/* background-color: #F5F5F5; */
 }
 
 ::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	-webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 66%);
 	background-color: #FEC369;
 }
 
