Add widget moon phase

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -178,6 +178,26 @@
         </section>
         <!-- Hết phần Các vệ tinh tự nhiên -->
 
+        <!-- Pha mặt trăng -->
+        <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr pt-0">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
+                        <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
+                            Pha Mặt Trăng
+                        </h5>
+                        <p class="text-center text-white">Pha Mặt Trăng là sự xuất hiện của phần bề mặt Mặt Trăng được chiếu sáng bởi Mặt Trời khi quan sát từ một vị trí, thường là từ Trái Đất.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 blog-content">
+                        <script src="{{ site.baseurl }}/js/mooncalendar.js"></script>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Hết phần Pha mặt trăng -->
+
     </div>
     {%- include footer.html -%}
   </body>
