--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,66 +1,33 @@
 <footer class="footer-hotel-resort footer-dark bg-dark-purple" style="background-image:url('{{ site.baseurl }}/images/bg-footer.webp');background-position: center;background-repeat: no-repeat;background-size:cover;">
-  <div class="footer-top padding-six-tb lg-padding-seven-tb md-padding-50px-tb">
-      <div class="container">
-          <div class="row">
-              <!-- start footer column -->
-              <div class="col-12 col-md-3 col-sm-6 sm-margin-40px-bottom xs-margin-30px-bottom">
-                  <span class="alt-font font-weight-500 d-block text-white text-uppercase text-medium margin-15px-bottom xs-margin-10px-bottom letter-spacing-1px">Company</span>
-                  <ul>
-                      <li><a href="about-us.html">About company</a></li>
-                      <li><a href="our-services.html">Our services</a></li>
-                      <li><a href="our-team.html">Job opportunities</a></li>
-                      <li><a href="contact-us-classic.html">Contact us</a></li>
-                  </ul>
-              </div>
-              <!-- end footer column -->
-              <!-- start footer column -->
-              <div class="col-12 col-md-3 col-sm-6 sm-margin-40px-bottom xs-margin-30px-bottom">
-                  <span class="alt-font font-weight-500 d-block text-white text-uppercase text-medium margin-15px-bottom xs-margin-10px-bottom letter-spacing-1px">Customer</span>
-                  <ul>                           
-                      <li><a href="faq.html">Client support</a></li>
-                      <li><a href="pricing-packages.html">Pricing packages</a></li>
-                      <li><a href="our-story.html">Company story</a></li>
-                      <li><a href="latest-news.html">Latest news</a></li>
-                  </ul>
-              </div>
-              <!-- end footer column -->
-              <!-- start footer column -->
-              <div class="col-12 col-md-3 col-sm-6 xs-margin-30px-bottom">
-                  <span class="alt-font font-weight-500 d-block text-white text-uppercase text-medium margin-15px-bottom xs-margin-10px-bottom letter-spacing-1px">Resources</span>
-                  <ul>                           
-                      <li><a href="faq.html">Theme guide</a></li>
-                      <li><a href="faq.html">Support desk</a></li>
-                      <li><a href="what-we-offers.html">What we offer</a></li>
-                      <li><a href="our-story.html">Company history</a></li>
-                  </ul>
-              </div>
-              <!-- end footer column -->
-              <!-- start footer column -->
-              <div class="col-12 col-md-3 col-sm-6">
-                  <span class="alt-font font-weight-500 d-block text-white text-uppercase text-medium margin-15px-bottom xs-margin-10px-bottom letter-spacing-1px">Destinations</span>
-                  <ul>
-                      <li><a href="#">New zealand</a></li>
-                      <li><a href="#">North macedonia</a></li>
-                      <li><a href="#">United arab emirates</a></li>
-                      <li><a href="#">United kingdom</a></li>
-                  </ul>
-              </div>
-              <!-- end footer column -->
-          </div>
-      </div>
-  </div>
-  <div class="footer-bottom padding-one-top padding-six-bottom d-inline-block w-100">
-      <div class="container"> 
-          <div class="row align-items-center">
-              <div class="col-12 col-sm-4 text-center text-sm-left xs-margin-20px-bottom">
-                  <a href="{{ "/" | relative_url }}" class="footer-logo"><img src="{{ site.baseurl }}/images/logo.png" alt=""></a>
-              </div>
-              <div class="col-12 col-sm-8 text-center text-sm-right last-paragraph-no-margin">
-                  <p>&copy; 2021 Bản quyền thuộc về <a href="https://namgd.com/" target="_blank" class="text-decoration-line-bottom text-white" rel="noopener">NamGD.com</a></p>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="footer-top padding-six-tb lg-padding-seven-tb md-padding-50px-tb">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-8 text-center">
+                    <div class="social-icon-style-10 margin-3-half-rem-bottom">
+                        <ul class="large-icon">
+                            <li><a class="facebook text-white" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i><span></span></a></li>
+                            <li><a class="instagram text-white" href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i><span></span></a></li>
+                            <li><a class="youtube text-white" href="http://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i><span></span></a></li>
+                        </ul>
+                    </div>
+                    <h4 class="alt-font text-slate-blue-light font-weight-300 margin-10px-bottom d-block letter-spacing-minus-2px">Nếu bạn có bất kỳ câu hỏi nào, hãy liên hệ với chúng tôi!</h4>
+                    <h4 class="alt-font font-weight-600 margin-7-rem-bottom"><a href="mailto:{{ site.email }}" class="text-gradient-sky-blue-dark-pink">{{ site.email }}</a></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom padding-one-top padding-six-bottom d-inline-block w-100">
+        <div class="container"> 
+            <div class="row align-items-center">
+                <div class="col-12 col-sm-4 text-center text-sm-left xs-margin-20px-bottom">
+                    <a href="{{ "/" | relative_url }}" class="footer-logo"><img src="{{ site.baseurl }}/images/logo.png" alt=""></a>
+                </div>
+                <div class="col-12 col-sm-8 text-center text-sm-right last-paragraph-no-margin">
+                    <p>&copy; 2021 Bản quyền thuộc về <a href="https://namgd.com/" target="_blank" class="text-decoration-line-bottom text-white" rel="noopener">NamGD.com</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 
 <a class="scroll-top-arrow" href="javascript:void(0);"><i class="feather icon-feather-arrow-up"></i></a>
