--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,9 @@
                 <div class="col-12 col-lg-8 text-center">
                     <div class="social-icon-style-10 margin-3-half-rem-bottom">
                         <ul class="large-icon">
-                            <li><a class="facebook text-white" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i><span></span></a></li>
-                            <li><a class="instagram text-white" href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i><span></span></a></li>
-                            <li><a class="youtube text-white" href="http://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i><span></span></a></li>
+                            <li><a class="facebook text-white" href="#" target="_blank"><i class="fab fa-facebook-f"></i><span></span></a></li>
+                            <li><a class="instagram text-white" href="#" target="_blank"><i class="fab fa-instagram"></i><span></span></a></li>
+                            <li><a class="youtube text-white" href="#" target="_blank"><i class="fab fa-youtube"></i><span></span></a></li>
                         </ul>
                     </div>
                     <h4 class="alt-font text-slate-blue-light font-weight-300 margin-10px-bottom d-block letter-spacing-minus-2px">Nếu bạn có bất kỳ câu hỏi nào, hãy liên hệ với chúng tôi!</h4>
