--- a/css/css-custom.css
+++ b/css/css-custom.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap'); */
 
 ::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 58%);
