Update js footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
 
 <a class="scroll-top-arrow" href="javascript:void(0);"><i class="feather icon-feather-arrow-up"></i></a>
 
-<script src="{{ "/js/jquery.min.js" | relative_url }}" async></script>
-<script src="{{ "/js/theme-vendors.min.js" | relative_url }}" async></script>
-<script src="{{ "/js/main.js" | relative_url }}" async></script>
-<script src="{{ "/js/js_custom.js" | relative_url }}" async></script>
+<script src="{{ "/js/jquery.min.js" | relative_url }}"></script>
+<script src="{{ "/js/theme-vendors.min.js" | relative_url }}"></script>
+<script src="{{ "/js/main.js" | relative_url }}"></script>
+<script src="{{ "/js/js_custom.js" | relative_url }}"></script>
