--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -67,7 +67,7 @@
                                     <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                         <div class="blog-post-image bg-medium-slate-blue">
                                             <a href="{{ post.url }}" title="{{ post.title }}">
-                                                <img rel="prefetch" src="{{ site.baseurl }}/images/kien-thuc//category/he-mat-troi/{{ post.image }}.webp" alt="">
+                                                <img src="{{ site.baseurl }}/images/kien-thuc//category/he-mat-troi/{{ post.image }}.webp" loading="lazy" alt="">
                                             </a>
                                         </div>
                                         <div class="post-details padding-2-rem-lr padding-1-half-rem-tb bg-black text-center">
@@ -110,7 +110,7 @@
                                     <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                         <div class="blog-post-image bg-medium-slate-blue">
                                             <a href="{{ post.url }}" title="{{ post.title }}">
-                                                <img rel="prefetch" src="{{ site.baseurl }}/images/lich-thien-van/post/{{ post.image }}.webp" alt="">
+                                                <img src="{{ site.baseurl }}/images/lich-thien-van/post/{{ post.image }}.webp" loading="lazy" alt="">
                                             </a>
                                             <a href="{{ post.url }}" class="blog-category alt-font font-weight-600">Ngày {{ post.thoigian }}/{{ post.date | date: "%m" }}</a>
                                         </div>
@@ -152,7 +152,7 @@
                                         <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                             <div class="blog-post-image bg-medium-slate-blue">
                                                 <a href="{{ post.url }}" title="{{ post.title }}">
-                                                    <img rel="prefetch" src="{{ site.baseurl }}/images/kien-thuc//category/he-mat-troi/ve-tinh/{{ post.image }}.webp" alt="">
+                                                    <img src="{{ site.baseurl }}/images/kien-thuc//category/he-mat-troi/ve-tinh/{{ post.image }}.webp" loading="lazy" alt="">
                                                 </a>
                                             </div>
                                             <div class="post-details padding-2-rem-lr padding-1-half-rem-tb bg-black text-center">
