--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,6 @@
 
 <a class="scroll-top-arrow" href="javascript:void(0);"><i class="feather icon-feather-arrow-up"></i></a>
 
-<script src="{{ "/js/jquery.min.js" | relative_url }}"></script>
-<script src="{{ "/js/theme-vendors.min.js" | relative_url }}"></script>
-<script src="{{ "/js/main.js" | relative_url }}"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src='{{ "/js/theme-vendors.min.js" | relative_url }}'></script>
+<script src='{{ "/js/main.js" | relative_url }}'></script>
