--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
   {%- seo -%}
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{{ "/css/font-icons.min.css" | relative_url }}">
-  <link rel="stylesheet" type="text/css" href="{{ "/css/theme-vendors.min.css" | relative_url }}">
-  <link rel="stylesheet" type="text/css" href="{{ "/css/style.css" | relative_url }}" />
-  <link rel="stylesheet" type="text/css" href="{{ "/css/responsive.css" | relative_url }}" />
-  <link rel="stylesheet" type="text/css" href="{{ "/css/css-custom.css" | relative_url }}" />
+  <link rel="stylesheet" type="text/css" href='{{ "/css/font-icons.min.css" | relative_url }}'>
+  <link rel="stylesheet" type="text/css" href='{{ "/css/theme-vendors.min.css" | relative_url }}'>
+  <link rel="stylesheet" type="text/css" href='{{ "/css/style.css" | relative_url }}' />
+  <link rel="stylesheet" type="text/css" href='{{ "/css/responsive.css" | relative_url }}' />
+  <link rel="stylesheet" type="text/css" href='{{ "/css/css-custom.css" | relative_url }}' />
 
   {%- feed_meta -%}
 </head>
