--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="{{ site.baseurl }}/images/favicon.png" type="image/x-icon" rel="icon" />
   {%- seo -%}
+  <meta name="keywords" content="{{ site.keywords | join: ', ' | escape }}"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href='{{ "/css/font-icons.min.css" | relative_url }}'>
