--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "vi" }}">
+<html lang="{{ page.lang | default: site.lang | default: 'vi' }}">
 
   {%- include head.html -%}
 
