Add plugin sitemap

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,9 @@
         <div class="container"> 
             <div class="row align-items-center">
                 <div class="col-12 col-sm-4 text-center text-sm-left xs-margin-20px-bottom">
-                    <a href="{{ "/" | relative_url }}" class="footer-logo"><img src="{{ site.baseurl }}/images/logo.png" alt=""></a>
+                    <a href="{{ "/" | relative_url }}" class="footer-logo">
+                        <img src="{{ site.logo }}" title="{{ site.title }}" alt="{{ site.title }}">
+                    </a>
                 </div>
                 <div class="col-12 col-sm-8 text-center text-sm-right last-paragraph-no-margin">
                     <p>&copy; 2021 Bản quyền thuộc về <a href="https://namgd.com/" target="_blank" class="text-decoration-line-bottom text-white" rel="noopener">NamGD.com</a></p>
