--- a/_includes/header-menu.html
+++ b/_includes/header-menu.html
@@ -2,7 +2,7 @@
     <!-- start logo -->
     <div class="col-auto col-sm-6 col-lg-3 mr-auto pl-lg-0">
         <a class="navbar-brand" href="{{ "/" | relative_url }}">
-            <img src="{{ site.baseurl }}/images/logo.png" alt="">
+            <img src="{{ site.logo }}" title="{{ site.title }}" alt="{{ site.title }}">
         </a>
     </div>
     <div class="col-auto col-lg-6 menu-order px-lg-0">
