--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-hotel-resort footer-dark bg-dark-purple" style="background-image:url('{{ site.baseurl }}/images/bg-footer.webp');background-position: center;background-repeat: no-repeat;background-size:cover;">
+<footer class="footer-hotel-resort footer-dark bg-dark-purple background-footer">
     <div class="footer-top padding-six-tb lg-padding-seven-tb md-padding-50px-tb">
         <div class="container">
             <div class="row justify-content-center">
