--- a/css/css-custom.css
+++ b/css/css-custom.css
@@ -141,6 +141,13 @@ a:focus, a:hover {
     height: 90px;
 }
 
+.background-footer {
+    background-image: url(../images/bg-footer.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 @media (max-width: 768px) {
     .moon-phase_box {
         padding: 0px;
