Add cdn library lazysizes.js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,3 +37,4 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src='{{ "/js/theme-vendors.min.js" | relative_url }}'></script>
 <script src='{{ "/js/main.js" | relative_url }}'></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js" async></script>
