--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,9 @@
                             <!-- start slider item -->
                             {% for item in site.data.slide_main.slidemain %}
                                 {% for slide in item.slides %}
-                                    <div class="swiper-slide cover-background" style="background-image:url('{{ site.baseurl }}/images/kien-thuc/he-mat-troi/{{ slide.image | escape }}');">
+                                    <div class="swiper-slide cover-background lazyload" 
+                                    style="background-image:url('{{ site.baseurl }}/images/bg-lazy/bg-lazy-slide.svg');"
+                                    data-bg="{{ site.baseurl }}/images/kien-thuc/he-mat-troi/{{ slide.image | escape }}">
                                         <div class="container h-100">
                                             <div class="row justify-content-start h-100">
                                                 <div class="col-12 col-xl-6 col-sm-7 d-flex flex-column justify-content-center text-center h-100">
@@ -67,7 +69,7 @@
                                     <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                         <div class="blog-post-image bg-medium-slate-blue">
                                             <a href="{{ post.url }}" title="{{ post.title }}">
-                                                <img src="{{ site.baseurl }}/images/bg-lazy.svg" data-src="{{ site.baseurl }}/images/kien-thuc//category/he-mat-troi/{{ post.image }}.webp" class="lazyload" title="{{ post.title }}" alt="{{ post.title }}">
+                                                <img src="{{ site.baseurl }}/images/bg-lazy/bg-lazy-item.svg" data-src="{{ site.baseurl }}/images/kien-thuc/category/he-mat-troi/{{ post.image }}.webp" class="lazyload" title="{{ post.title }}" alt="{{ post.title }}">
                                             </a>
                                         </div>
                                         <div class="post-details padding-2-rem-lr padding-1-half-rem-tb bg-black text-center">
@@ -110,7 +112,7 @@
                                     <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                         <div class="blog-post-image bg-medium-slate-blue">
                                             <a href="{{ post.url }}" title="{{ post.title }}">
-                                                <img src="{{ site.baseurl }}/images/bg-lazy.svg" data-src="{{ site.baseurl }}/images/lich-thien-van/post/{{ post.image }}.webp" class="lazyload" title="{{ post.title }}" alt="{{ post.title }}">
+                                                <img src="{{ site.baseurl }}/images/bg-lazy/bg-lazy-item.svg" data-src="{{ site.baseurl }}/images/lich-thien-van/post/{{ post.image }}.webp" class="lazyload" title="{{ post.title }}" alt="{{ post.title }}">
                                             </a>
                                             <a href="{{ post.url }}" class="blog-category alt-font font-weight-600">Ngày {{ post.thoigian }}/{{ post.date | date: "%m" }}</a>
                                         </div>
@@ -152,7 +154,7 @@
                                         <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                             <div class="blog-post-image bg-medium-slate-blue">
                                                 <a href="{{ post.url }}" title="{{ post.title }} - Vệ tinh của {{ post.satellite-of }}">
-                                                    <img src="{{ site.baseurl }}/images/bg-lazy.svg" data-src="{{ site.baseurl }}/images/kien-thuc//category/he-mat-troi/ve-tinh/{{ post.image }}.webp" class="lazyload" title="{{ post.title }} - Vệ tinh của {{ post.satellite-of }}" alt="{{ post.title }} - Vệ tinh của {{ post.satellite-of }}">
+                                                    <img src="{{ site.baseurl }}/images/bg-lazy/bg-lazy-item.svg" data-src="{{ site.baseurl }}/images/kien-thuc/category/he-mat-troi/ve-tinh/{{ post.image }}.webp" class="lazyload" title="{{ post.title }} - Vệ tinh của {{ post.satellite-of }}" alt="{{ post.title }} - Vệ tinh của {{ post.satellite-of }}">
                                                 </a>
                                             </div>
                                             <div class="post-details padding-2-rem-lr padding-1-half-rem-tb bg-black text-center">
