Update info planet

--- a/css/css-custom.css
+++ b/css/css-custom.css
@@ -62,7 +62,7 @@ body {
     margin: 0 0 25px;
 }
 
-.footer-hotel-resort.footer-dark, .footer-hotel-resort.footer-dark a {
+.footer-hotel-resort.footer-dark .social-icon-style-10 a {
     border-radius: 6px;
 }
 
